# rust-grpc-demo

./: Cargo.toml  build.rs
src/: client.rs  server.rs
