[package]
name = "grpc"
version = "0.1.0"
authors = ["Jack Baude"]
edition = "2021"

[dependencies]
tonic = "0.8"
prost = "0.11"
futures-channel="0.3"
futures-core = "0.3"
futures-util = "0.3"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "sync", "time", "net", "fs", "signal"] }
tokio-stream = { version = "0.1", features = ["net"] }
tower = { version = "0.4" }

[dev-dependencies]
once_cell = "1.8.0"
rand = "0.8.5"

[build-dependencies]
tonic-build = "0.8.0"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"